<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    android:padding="50dp">

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingBottom="10dp"
        android:text="@string/vibe_help_message1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/vibe_help_message2"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/vibe_help_message3"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/vibe_help_message4"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line3" />

    <TextView
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/vibe_help_message5"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line4" />

    <TextView
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/vibe_help_message6"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line5" />

    <TextView
        android:id="@+id/line7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/vibe_help_message7"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/line6" />

    <TextView
        android:id="@+id/link0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingVertical="10dp"
        android:text="@string/link_0"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/line7" />

    <TextView
        android:id="@+id/link1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/link_1"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/link0" />

    <TextView
        android:id="@+id/link2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/link_2"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/link1" />

    <TextView
        android:id="@+id/link3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingLeft="20dp"
        android:text="@string/link_3"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/link2" />

</androidx.constraintlayout.widget.ConstraintLayout>