<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/score_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/score_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&amp;e0"
        android:textSize="100sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_bar" />

    <Button
        android:id="@+id/check_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_display" />

    <Button
        android:id="@+id/vibe_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibe_help"
        app:layout_constraintBottom_toTopOf="@+id/view_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_again" />

    <Button
        android:id="@+id/view_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_again" />
</androidx.constraintlayout.widget.ConstraintLayout>