<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitActivity">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/as_seen_on"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@id/news1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings" />

    <LinearLayout
        android:id="@+id/news1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/news2"
        app:layout_constraintTop_toBottomOf="@id/review">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingHorizontal="15dp"
            android:src="@drawable/cnn" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingHorizontal="15dp"
            android:src="@drawable/cbs" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/news2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/check_vibe"
        app:layout_constraintTop_toBottomOf="@id/review">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingHorizontal="15dp"
            android:src="@drawable/cbc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingHorizontal="15dp"
            android:src="@drawable/kct" />

    </LinearLayout>

    <Button
        android:id="@+id/check_vibe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/check_your_vibe"/>
</androidx.constraintlayout.widget.ConstraintLayout>